# surfelmeshing

./: CMakeLists.txt  README.md
applications/surfel_meshing/: CMakeLists.txt
applications/surfel_meshing/src/: main.cc
applications/surfel_meshing/src/surfel_meshing/: ArgumentParser.cc  ArgumentParser.h  SurfelMeshingSettings.h  asynchronous_meshing.cc  cuda_c_utils.cc  cuda_c_utils.h  cuda_depth_processing.cu  cuda_surfel_reconstruction.cc  cuda_surfel_reconstruction.h  cuda_surfel_reconstruction_kernels.cc  cuda_surfel_reconstruction_kernels.cu  cuda_surfel_reconstruction_kernels.cuh  cuda_surfels_cpu.h  depth_processing_utils.h  fps_adjustment.cc  fps_adjustment.h  mainViewers.cc  mainViewers.h  main_0506.cc  main_0507.cc  main_camera_model.cc  main_camera_model.h  main_utils.h  meshTerminalUI.cc  meshTerminalUI.h  octree.cc  playbackKeyframe.cc  playbackKeyframe.h  read_rgbd_dataset_task.h  read_yaml_task.h  rgbd_realsense_dataset.h  struct_utils.h  surfel.h  surfel2cpu_task.cc  surfel2cpu_task.h  surfel_meshing.cc  surfel_meshing.h  txt_logger.cc  txt_logger.h
applications/surfel_meshing/src/surfel_meshing/test/: test_octree.cc  test_triangulation.cc
libvis/src/libvis/: mesh.h  rgbd_video_io_tum_dataset.h
resources/: surfel_meshing_0410.tar.xz
results/: o3d_io_0409.py
